--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
         "start": "next start"
     },
     "dependencies": {
-        "next": "10.0.5",
+        "next": "^10.2.2",
         "react": "17.0.1",
         "react-dom": "17.0.1",
-        "sass": "^1.32.8"
+        "sass": "^1.32.13"
     },
     "devDependencies": {
-        "prettier": "^2.2.1"
+        "prettier": "^2.3.0"
     }
 }
